--- a/oefening.html
+++ b/oefening.html
@@ -3040,6 +3040,296 @@
                 correctAnswer: "poetsen",
                 uitgang: "en",
                 explanation: "Tegenwoordige tijd: meervoud krijgt het hele werkwoord.",
+            },
+
+            // VISSEN (4 zinnen)
+            {
+                sentence: "Ik [...] vaak in de rivier",
+                werkwoord: "vissen",
+                onderwerp: "ik",
+                onderwerpDisplay: "ik (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "vis",
+                correctAnswer: "vis",
+                uitgang: "",
+                explanation: "Tegenwoordige tijd: bij 'ik' gebruik je de stam zonder uitgang.",
+            },
+            {
+                sentence: "Jij [...] altijd op dezelfde plek",
+                werkwoord: "vissen",
+                onderwerp: "jij",
+                onderwerpDisplay: "jij (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "vis",
+                correctAnswer: "vist",
+                uitgang: "t",
+                explanation: "Tegenwoordige tijd: stam + 't' bij jij in vragende zin.",
+            },
+            {
+                sentence: "Mijn opa [...] elke zaterdag",
+                werkwoord: "vissen",
+                onderwerp: "hij",
+                onderwerpDisplay: "hij (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "vis",
+                correctAnswer: "vist",
+                uitgang: "t",
+                explanation: "Tegenwoordige tijd: stam + 't' bij hij/zij/het.",
+            },
+            {
+                sentence: "Wij [...] graag in het meer",
+                werkwoord: "vissen",
+                onderwerp: "wij",
+                onderwerpDisplay: "wij (meervoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "vis",
+                correctAnswer: "vissen",
+                uitgang: "en",
+                explanation: "Tegenwoordige tijd: meervoud krijgt het hele werkwoord.",
+            },
+
+            // WERKEN (4 zinnen)
+            {
+                sentence: "Ik [...] elke dag van negen tot vijf",
+                werkwoord: "werken",
+                onderwerp: "ik",
+                onderwerpDisplay: "ik (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "werk",
+                correctAnswer: "werk",
+                uitgang: "",
+                explanation: "Tegenwoordige tijd: bij 'ik' gebruik je de stam zonder uitgang.",
+            },
+            {
+                sentence: "Jij [...] veel te hard",
+                werkwoord: "werken",
+                onderwerp: "jij",
+                onderwerpDisplay: "jij (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "werk",
+                correctAnswer: "werkt",
+                uitgang: "t",
+                explanation: "Tegenwoordige tijd: stam + 't' bij jij in vragende zin.",
+            },
+            {
+                sentence: "Ze [...] in een ziekenhuis",
+                werkwoord: "werken",
+                onderwerp: "zij",
+                onderwerpDisplay: "zij (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "werk",
+                correctAnswer: "werkt",
+                uitgang: "t",
+                explanation: "Tegenwoordige tijd: stam + 't' bij hij/zij/het.",
+            },
+            {
+                sentence: "Jullie [...] samen aan het project",
+                werkwoord: "werken",
+                onderwerp: "jullie",
+                onderwerpDisplay: "jullie (meervoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "werk",
+                correctAnswer: "werken",
+                uitgang: "en",
+                explanation: "Tegenwoordige tijd: meervoud krijgt het hele werkwoord.",
+            },
+
+            // ZOEKEN (4 zinnen)
+            {
+                sentence: "Ik [...] mijn sleutels overal",
+                werkwoord: "zoeken",
+                onderwerp: "ik",
+                onderwerpDisplay: "ik (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "zoek",
+                correctAnswer: "zoek",
+                uitgang: "",
+                explanation: "Tegenwoordige tijd: bij 'ik' gebruik je de stam zonder uitgang.",
+            },
+            {
+                sentence: "Jij [...] naar een nieuwe baan",
+                werkwoord: "zoeken",
+                onderwerp: "jij",
+                onderwerpDisplay: "jij (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "zoek",
+                correctAnswer: "zoekt",
+                uitgang: "t",
+                explanation: "Tegenwoordige tijd: stam + 't' bij jij in vragende zin.",
+            },
+            {
+                sentence: "De hond [...] zijn bal in de tuin",
+                werkwoord: "zoeken",
+                onderwerp: "hij",
+                onderwerpDisplay: "hij (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "zoek",
+                correctAnswer: "zoekt",
+                uitgang: "t",
+                explanation: "Tegenwoordige tijd: stam + 't' bij hij/zij/het.",
+            },
+            {
+                sentence: "Zij [...] samen naar een oplossing",
+                werkwoord: "zoeken",
+                onderwerp: "zij",
+                onderwerpDisplay: "zij (meervoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "zoek",
+                correctAnswer: "zoeken",
+                uitgang: "en",
+                explanation: "Tegenwoordige tijd: meervoud krijgt het hele werkwoord.",
+            },
+
+            // KOPEN (4 zinnen)
+            {
+                sentence: "Ik [...] elke week boodschappen",
+                werkwoord: "kopen",
+                onderwerp: "ik",
+                onderwerpDisplay: "ik (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "koop",
+                correctAnswer: "koop",
+                uitgang: "",
+                explanation: "Tegenwoordige tijd: bij 'ik' gebruik je de stam zonder uitgang.",
+            },
+            {
+                sentence: "Jij [...] altijd dure spullen",
+                werkwoord: "kopen",
+                onderwerp: "jij",
+                onderwerpDisplay: "jij (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "koop",
+                correctAnswer: "koopt",
+                uitgang: "t",
+                explanation: "Tegenwoordige tijd: stam + 't' bij jij in vragende zin.",
+            },
+            {
+                sentence: "Hij [...] een cadeau voor zijn moeder",
+                werkwoord: "kopen",
+                onderwerp: "hij",
+                onderwerpDisplay: "hij (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "koop",
+                correctAnswer: "koopt",
+                uitgang: "t",
+                explanation: "Tegenwoordige tijd: stam + 't' bij hij/zij/het.",
+            },
+            {
+                sentence: "Wij [...] morgen een nieuwe auto",
+                werkwoord: "kopen",
+                onderwerp: "wij",
+                onderwerpDisplay: "wij (meervoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "koop",
+                correctAnswer: "kopen",
+                uitgang: "en",
+                explanation: "Tegenwoordige tijd: meervoud krijgt het hele werkwoord.",
+            },
+
+            // STOPPEN (4 zinnen)
+            {
+                sentence: "Ik [...] met roken",
+                werkwoord: "stoppen",
+                onderwerp: "ik",
+                onderwerpDisplay: "ik (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "stop",
+                correctAnswer: "stop",
+                uitgang: "",
+                explanation: "Tegenwoordige tijd: bij 'ik' gebruik je de stam zonder uitgang.",
+            },
+            {
+                sentence: "Jij [...] nooit met oefenen",
+                werkwoord: "stoppen",
+                onderwerp: "jij",
+                onderwerpDisplay: "jij (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "stop",
+                correctAnswer: "stopt",
+                uitgang: "t",
+                explanation: "Tegenwoordige tijd: stam + 't' bij jij in vragende zin.",
+            },
+            {
+                sentence: "De bus [...] bij het station",
+                werkwoord: "stoppen",
+                onderwerp: "hij",
+                onderwerpDisplay: "hij (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "stop",
+                correctAnswer: "stopt",
+                uitgang: "t",
+                explanation: "Tegenwoordige tijd: stam + 't' bij hij/zij/het.",
+            },
+            {
+                sentence: "Jullie [...] precies op tijd",
+                werkwoord: "stoppen",
+                onderwerp: "jullie",
+                onderwerpDisplay: "jullie (meervoud)",
+                isPersoonsvorm: true,
+                tijd: "tegenwoordig",
+                type: "tegenwoordig",
+                isSterk: false,
+                stam: "stop",
+                correctAnswer: "stoppen",
+                uitgang: "en",
+                explanation: "Tegenwoordige tijd: meervoud krijgt het hele werkwoord.",
             }
         ];
 
