--- a/oefening.html
+++ b/oefening.html
@@ -3911,6 +3911,296 @@
                 correctAnswer: "fixten",
                 uitgang: "ten",
                 explanation: "Verleden tijd meervoud: stam + 'ten' (x zit in 't ex-kofschip).",
+            },
+
+            // SWITCHEN (4 zinnen)
+            {
+                sentence: "Ik [...] naar een ander kanaal",
+                werkwoord: "switchen",
+                onderwerp: "ik",
+                onderwerpDisplay: "ik (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "verleden",
+                type: "verleden",
+                isSterk: false,
+                stam: "switch",
+                correctAnswer: "switchte",
+                uitgang: "te",
+                explanation: "Verleden tijd: stam + 'te' (ch zit in 't ex-kofschip).",
+            },
+            {
+                sentence: "Jij [...] plotseling van baan",
+                werkwoord: "switchen",
+                onderwerp: "jij",
+                onderwerpDisplay: "jij (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "verleden",
+                type: "verleden",
+                isSterk: false,
+                stam: "switch",
+                correctAnswer: "switchte",
+                uitgang: "te",
+                explanation: "Verleden tijd: stam + 'te' (ch zit in 't ex-kofschip).",
+            },
+            {
+                sentence: "Hij [...] tussen verschillende apps",
+                werkwoord: "switchen",
+                onderwerp: "hij",
+                onderwerpDisplay: "hij (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "verleden",
+                type: "verleden",
+                isSterk: false,
+                stam: "switch",
+                correctAnswer: "switchte",
+                uitgang: "te",
+                explanation: "Verleden tijd: stam + 'te' (ch zit in 't ex-kofschip).",
+            },
+            {
+                sentence: "Wij [...] van energieleverancier",
+                werkwoord: "switchen",
+                onderwerp: "wij",
+                onderwerpDisplay: "wij (meervoud)",
+                isPersoonsvorm: true,
+                tijd: "verleden",
+                type: "verleden",
+                isSterk: false,
+                stam: "switch",
+                correctAnswer: "switchten",
+                uitgang: "ten",
+                explanation: "Verleden tijd meervoud: stam + 'ten' (ch zit in 't ex-kofschip).",
+            },
+
+            // CHECKEN (4 zinnen)
+            {
+                sentence: "Ik [...] alle antwoorden nog een keer",
+                werkwoord: "checken",
+                onderwerp: "ik",
+                onderwerpDisplay: "ik (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "verleden",
+                type: "verleden",
+                isSterk: false,
+                stam: "check",
+                correctAnswer: "checkte",
+                uitgang: "te",
+                explanation: "Verleden tijd: stam + 'te' (k zit in 't ex-kofschip).",
+            },
+            {
+                sentence: "Jij [...] je mail niet",
+                werkwoord: "checken",
+                onderwerp: "jij",
+                onderwerpDisplay: "jij (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "verleden",
+                type: "verleden",
+                isSterk: false,
+                stam: "check",
+                correctAnswer: "checkte",
+                uitgang: "te",
+                explanation: "Verleden tijd: stam + 'te' (k zit in 't ex-kofschip).",
+            },
+            {
+                sentence: "De docent [...] alle werkstukken",
+                werkwoord: "checken",
+                onderwerp: "hij",
+                onderwerpDisplay: "hij (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "verleden",
+                type: "verleden",
+                isSterk: false,
+                stam: "check",
+                correctAnswer: "checkte",
+                uitgang: "te",
+                explanation: "Verleden tijd: stam + 'te' (k zit in 't ex-kofschip).",
+            },
+            {
+                sentence: "Jullie [...] de lijst grondig",
+                werkwoord: "checken",
+                onderwerp: "jullie",
+                onderwerpDisplay: "jullie (meervoud)",
+                isPersoonsvorm: true,
+                tijd: "verleden",
+                type: "verleden",
+                isSterk: false,
+                stam: "check",
+                correctAnswer: "checkten",
+                uitgang: "ten",
+                explanation: "Verleden tijd meervoud: stam + 'ten' (k zit in 't ex-kofschip).",
+            },
+
+            // PUSHEN (4 zinnen)
+            {
+                sentence: "Ik [...] mezelf tot het uiterste",
+                werkwoord: "pushen",
+                onderwerp: "ik",
+                onderwerpDisplay: "ik (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "verleden",
+                type: "verleden",
+                isSterk: false,
+                stam: "push",
+                correctAnswer: "pushte",
+                uitgang: "te",
+                explanation: "Verleden tijd: stam + 'te' (sh/s zit in 't ex-kofschip).",
+            },
+            {
+                sentence: "Jij [...] de grens wel ver",
+                werkwoord: "pushen",
+                onderwerp: "jij",
+                onderwerpDisplay: "jij (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "verleden",
+                type: "verleden",
+                isSterk: false,
+                stam: "push",
+                correctAnswer: "pushte",
+                uitgang: "te",
+                explanation: "Verleden tijd: stam + 'te' (sh/s zit in 't ex-kofschip).",
+            },
+            {
+                sentence: "De coach [...] het team hard",
+                werkwoord: "pushen",
+                onderwerp: "hij",
+                onderwerpDisplay: "hij (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "verleden",
+                type: "verleden",
+                isSterk: false,
+                stam: "push",
+                correctAnswer: "pushte",
+                uitgang: "te",
+                explanation: "Verleden tijd: stam + 'te' (sh/s zit in 't ex-kofschip).",
+            },
+            {
+                sentence: "Wij [...] elkaar om te blijven gaan",
+                werkwoord: "pushen",
+                onderwerp: "wij",
+                onderwerpDisplay: "wij (meervoud)",
+                isPersoonsvorm: true,
+                tijd: "verleden",
+                type: "verleden",
+                isSterk: false,
+                stam: "push",
+                correctAnswer: "pushten",
+                uitgang: "ten",
+                explanation: "Verleden tijd meervoud: stam + 'ten' (sh/s zit in 't ex-kofschip).",
+            },
+
+            // PASSEN (4 zinnen)
+            {
+                sentence: "Ik [...] verschillende jurken",
+                werkwoord: "passen",
+                onderwerp: "ik",
+                onderwerpDisplay: "ik (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "verleden",
+                type: "verleden",
+                isSterk: false,
+                stam: "pas",
+                correctAnswer: "paste",
+                uitgang: "te",
+                explanation: "Verleden tijd: stam + 'te' (s zit in 't ex-kofschip).",
+            },
+            {
+                sentence: "Jij [...] precies in het team",
+                werkwoord: "passen",
+                onderwerp: "jij",
+                onderwerpDisplay: "jij (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "verleden",
+                type: "verleden",
+                isSterk: false,
+                stam: "pas",
+                correctAnswer: "paste",
+                uitgang: "te",
+                explanation: "Verleden tijd: stam + 'te' (s zit in 't ex-kofschip).",
+            },
+            {
+                sentence: "De sleutel [...] perfect in het slot",
+                werkwoord: "passen",
+                onderwerp: "hij",
+                onderwerpDisplay: "hij (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "verleden",
+                type: "verleden",
+                isSterk: false,
+                stam: "pas",
+                correctAnswer: "paste",
+                uitgang: "te",
+                explanation: "Verleden tijd: stam + 'te' (s zit in 't ex-kofschip).",
+            },
+            {
+                sentence: "Zij [...] allemaal door de deur",
+                werkwoord: "passen",
+                onderwerp: "zij",
+                onderwerpDisplay: "zij (meervoud)",
+                isPersoonsvorm: true,
+                tijd: "verleden",
+                type: "verleden",
+                isSterk: false,
+                stam: "pas",
+                correctAnswer: "pasten",
+                uitgang: "ten",
+                explanation: "Verleden tijd meervoud: stam + 'ten' (s zit in 't ex-kofschip).",
+            },
+
+            // POETSEN (4 zinnen)
+            {
+                sentence: "Ik [...] de hele ochtend",
+                werkwoord: "poetsen",
+                onderwerp: "ik",
+                onderwerpDisplay: "ik (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "verleden",
+                type: "verleden",
+                isSterk: false,
+                stam: "poets",
+                correctAnswer: "poetste",
+                uitgang: "te",
+                explanation: "Verleden tijd: stam + 'te' (s zit in 't ex-kofschip).",
+            },
+            {
+                sentence: "Jij [...] je fiets helemaal glimmend",
+                werkwoord: "poetsen",
+                onderwerp: "jij",
+                onderwerpDisplay: "jij (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "verleden",
+                type: "verleden",
+                isSterk: false,
+                stam: "poets",
+                correctAnswer: "poetste",
+                uitgang: "te",
+                explanation: "Verleden tijd: stam + 'te' (s zit in 't ex-kofschip).",
+            },
+            {
+                sentence: "Mijn zusje [...] alle ramen",
+                werkwoord: "poetsen",
+                onderwerp: "zij",
+                onderwerpDisplay: "zij (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "verleden",
+                type: "verleden",
+                isSterk: false,
+                stam: "poets",
+                correctAnswer: "poetste",
+                uitgang: "te",
+                explanation: "Verleden tijd: stam + 'te' (s zit in 't ex-kofschip).",
+            },
+            {
+                sentence: "Jullie [...] het huis van boven tot onder",
+                werkwoord: "poetsen",
+                onderwerp: "jullie",
+                onderwerpDisplay: "jullie (meervoud)",
+                isPersoonsvorm: true,
+                tijd: "verleden",
+                type: "verleden",
+                isSterk: false,
+                stam: "poets",
+                correctAnswer: "poetsten",
+                uitgang: "ten",
+                explanation: "Verleden tijd meervoud: stam + 'ten' (s zit in 't ex-kofschip).",
             }
         ];
 
