--- a/oefening.html
+++ b/oefening.html
@@ -4201,6 +4201,296 @@
                 correctAnswer: "poetsten",
                 uitgang: "ten",
                 explanation: "Verleden tijd meervoud: stam + 'ten' (s zit in 't ex-kofschip).",
+            },
+
+            // VISSEN (4 zinnen)
+            {
+                sentence: "Ik [...] de hele dag zonder resultaat",
+                werkwoord: "vissen",
+                onderwerp: "ik",
+                onderwerpDisplay: "ik (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "verleden",
+                type: "verleden",
+                isSterk: false,
+                stam: "vis",
+                correctAnswer: "viste",
+                uitgang: "te",
+                explanation: "Verleden tijd: stam + 'te' (s zit in 't ex-kofschip).",
+            },
+            {
+                sentence: "Jij [...] bij de haven",
+                werkwoord: "vissen",
+                onderwerp: "jij",
+                onderwerpDisplay: "jij (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "verleden",
+                type: "verleden",
+                isSterk: false,
+                stam: "vis",
+                correctAnswer: "viste",
+                uitgang: "te",
+                explanation: "Verleden tijd: stam + 'te' (s zit in 't ex-kofschip).",
+            },
+            {
+                sentence: "Mijn oom [...] vroeger commercieel",
+                werkwoord: "vissen",
+                onderwerp: "hij",
+                onderwerpDisplay: "hij (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "verleden",
+                type: "verleden",
+                isSterk: false,
+                stam: "vis",
+                correctAnswer: "viste",
+                uitgang: "te",
+                explanation: "Verleden tijd: stam + 'te' (s zit in 't ex-kofschip).",
+            },
+            {
+                sentence: "Wij [...] samen in het kanaal",
+                werkwoord: "vissen",
+                onderwerp: "wij",
+                onderwerpDisplay: "wij (meervoud)",
+                isPersoonsvorm: true,
+                tijd: "verleden",
+                type: "verleden",
+                isSterk: false,
+                stam: "vis",
+                correctAnswer: "visten",
+                uitgang: "ten",
+                explanation: "Verleden tijd meervoud: stam + 'ten' (s zit in 't ex-kofschip).",
+            },
+
+            // WERKEN (4 zinnen)
+            {
+                sentence: "Ik [...] gisteren dubbele dienst",
+                werkwoord: "werken",
+                onderwerp: "ik",
+                onderwerpDisplay: "ik (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "verleden",
+                type: "verleden",
+                isSterk: false,
+                stam: "werk",
+                correctAnswer: "werkte",
+                uitgang: "te",
+                explanation: "Verleden tijd: stam + 'te' (k zit in 't ex-kofschip).",
+            },
+            {
+                sentence: "Jij [...] vorig jaar in Amsterdam",
+                werkwoord: "werken",
+                onderwerp: "jij",
+                onderwerpDisplay: "jij (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "verleden",
+                type: "verleden",
+                isSterk: false,
+                stam: "werk",
+                correctAnswer: "werkte",
+                uitgang: "te",
+                explanation: "Verleden tijd: stam + 'te' (k zit in 't ex-kofschip).",
+            },
+            {
+                sentence: "Zij [...] vroeger als verpleegkundige",
+                werkwoord: "werken",
+                onderwerp: "zij",
+                onderwerpDisplay: "zij (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "verleden",
+                type: "verleden",
+                isSterk: false,
+                stam: "werk",
+                correctAnswer: "werkte",
+                uitgang: "te",
+                explanation: "Verleden tijd: stam + 'te' (k zit in 't ex-kofschip).",
+            },
+            {
+                sentence: "Jullie [...] hard aan het project",
+                werkwoord: "werken",
+                onderwerp: "jullie",
+                onderwerpDisplay: "jullie (meervoud)",
+                isPersoonsvorm: true,
+                tijd: "verleden",
+                type: "verleden",
+                isSterk: false,
+                stam: "werk",
+                correctAnswer: "werkten",
+                uitgang: "ten",
+                explanation: "Verleden tijd meervoud: stam + 'ten' (k zit in 't ex-kofschip).",
+            },
+
+            // ZOEKEN (4 zinnen)
+            {
+                sentence: "Ik [...] urenlang naar mijn portemonnee",
+                werkwoord: "zoeken",
+                onderwerp: "ik",
+                onderwerpDisplay: "ik (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "verleden",
+                type: "verleden",
+                isSterk: false,
+                stam: "zoek",
+                correctAnswer: "zocht",
+                uitgang: "t",
+                explanation: "Verleden tijd: onregelmatig werkwoord zoeken → zocht.",
+            },
+            {
+                sentence: "Jij [...] op de verkeerde plek",
+                werkwoord: "zoeken",
+                onderwerp: "jij",
+                onderwerpDisplay: "jij (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "verleden",
+                type: "verleden",
+                isSterk: false,
+                stam: "zoek",
+                correctAnswer: "zocht",
+                uitgang: "t",
+                explanation: "Verleden tijd: onregelmatig werkwoord zoeken → zocht.",
+            },
+            {
+                sentence: "De politie [...] naar de verdachte",
+                werkwoord: "zoeken",
+                onderwerp: "hij",
+                onderwerpDisplay: "hij (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "verleden",
+                type: "verleden",
+                isSterk: false,
+                stam: "zoek",
+                correctAnswer: "zocht",
+                uitgang: "t",
+                explanation: "Verleden tijd: onregelmatig werkwoord zoeken → zocht.",
+            },
+            {
+                sentence: "Zij [...] samen naar een oplossing",
+                werkwoord: "zoeken",
+                onderwerp: "zij",
+                onderwerpDisplay: "zij (meervoud)",
+                isPersoonsvorm: true,
+                tijd: "verleden",
+                type: "verleden",
+                isSterk: false,
+                stam: "zoek",
+                correctAnswer: "zochten",
+                uitgang: "ten",
+                explanation: "Verleden tijd meervoud: onregelmatig werkwoord zoeken → zochten.",
+            },
+
+            // KOPEN (4 zinnen)
+            {
+                sentence: "Ik [...] vorige week een nieuwe fiets",
+                werkwoord: "kopen",
+                onderwerp: "ik",
+                onderwerpDisplay: "ik (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "verleden",
+                type: "verleden",
+                isSterk: false,
+                stam: "koop",
+                correctAnswer: "kocht",
+                uitgang: "t",
+                explanation: "Verleden tijd: onregelmatig werkwoord kopen → kocht.",
+            },
+            {
+                sentence: "Jij [...] het duurste exemplaar",
+                werkwoord: "kopen",
+                onderwerp: "jij",
+                onderwerpDisplay: "jij (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "verleden",
+                type: "verleden",
+                isSterk: false,
+                stam: "koop",
+                correctAnswer: "kocht",
+                uitgang: "t",
+                explanation: "Verleden tijd: onregelmatig werkwoord kopen → kocht.",
+            },
+            {
+                sentence: "Hij [...] een mooi cadeau voor haar",
+                werkwoord: "kopen",
+                onderwerp: "hij",
+                onderwerpDisplay: "hij (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "verleden",
+                type: "verleden",
+                isSterk: false,
+                stam: "koop",
+                correctAnswer: "kocht",
+                uitgang: "t",
+                explanation: "Verleden tijd: onregelmatig werkwoord kopen → kocht.",
+            },
+            {
+                sentence: "Wij [...] gezamenlijk een huis",
+                werkwoord: "kopen",
+                onderwerp: "wij",
+                onderwerpDisplay: "wij (meervoud)",
+                isPersoonsvorm: true,
+                tijd: "verleden",
+                type: "verleden",
+                isSterk: false,
+                stam: "koop",
+                correctAnswer: "kochten",
+                uitgang: "ten",
+                explanation: "Verleden tijd meervoud: onregelmatig werkwoord kopen → kochten.",
+            },
+
+            // STOPPEN (4 zinnen)
+            {
+                sentence: "Ik [...] plotseling met hardlopen",
+                werkwoord: "stoppen",
+                onderwerp: "ik",
+                onderwerpDisplay: "ik (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "verleden",
+                type: "verleden",
+                isSterk: false,
+                stam: "stop",
+                correctAnswer: "stopte",
+                uitgang: "te",
+                explanation: "Verleden tijd: stam + 'te' (p zit in 't ex-kofschip).",
+            },
+            {
+                sentence: "Jij [...] voor het rode licht",
+                werkwoord: "stoppen",
+                onderwerp: "jij",
+                onderwerpDisplay: "jij (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "verleden",
+                type: "verleden",
+                isSterk: false,
+                stam: "stop",
+                correctAnswer: "stopte",
+                uitgang: "te",
+                explanation: "Verleden tijd: stam + 'te' (p zit in 't ex-kofschip).",
+            },
+            {
+                sentence: "De trein [...] onderweg meerdere keren",
+                werkwoord: "stoppen",
+                onderwerp: "hij",
+                onderwerpDisplay: "hij (enkelvoud)",
+                isPersoonsvorm: true,
+                tijd: "verleden",
+                type: "verleden",
+                isSterk: false,
+                stam: "stop",
+                correctAnswer: "stopte",
+                uitgang: "te",
+                explanation: "Verleden tijd: stam + 'te' (p zit in 't ex-kofschip).",
+            },
+            {
+                sentence: "Jullie [...] net op tijd",
+                werkwoord: "stoppen",
+                onderwerp: "jullie",
+                onderwerpDisplay: "jullie (meervoud)",
+                isPersoonsvorm: true,
+                tijd: "verleden",
+                type: "verleden",
+                isSterk: false,
+                stam: "stop",
+                correctAnswer: "stopten",
+                uitgang: "ten",
+                explanation: "Verleden tijd meervoud: stam + 'ten' (p zit in 't ex-kofschip).",
             }
         ];
 
